[package]
name = "oxide-test"
version = "0.1.0"
authors = ["TheSpooler <spooler@venrik.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-files = "0.6.0-beta.16"
actix-web = "4.0.0-rc.3"
env_logger = "0.9"
futures = "0.3.21"
log = "0.4"
oxide-auth = { version = "0.5.1", git = "https://github.com/thespooler/oxide-auth", branch = "actix-web-4" }
oxide-auth-actix = { version = "0.1.0", git = "https://github.com/thespooler/oxide-auth", branch = "actix-web-4" }
sailfish = "0.3.4"
url = "2"
